# 3sx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  build-deps.sh  caplogo-funcs.txt  caplogo-progress.md  context.c  cri-funcs.json  cri-progress.md  diff_settings.py  requirements.txt
.github/workflows/: build-windows-002.yml  build_and_check.yml  build_linux.yml  build_macos.yml  build_windows.yml
asm/: 000868.s  000D68.s  000DC8.s  0010F8.s  0011D8.s  001318.s  001408.s  0014B8.s  001538.s  001638.s  0016A8.s  001728.s  001A98.s  001BE8.s  001C38.s  002098.s  002268.s  002548.s  002848.s  002868.s  0028F8.s  0035E8.s  003668.s  003918.s  003998.s  003A58.s  003AD8.s  003F68.s  003FE8.s  0041B8.s  004238.s  0042C8.s  004358.s  0043A8.s  0045E8.s  004A18.s  0052C8.s  0052D8.s  0055D8.s  005808.s  (+353 more)
asm/data/: comment.s  elf_header.s  reginfo.s
cmake/: Info.plist
config/: sfiii.yaml  symbol_addrs.txt  undefined_funcs_auto.txt  undefined_syms_auto.txt
config/anniversary/: sfiii.anniversary.yaml  undefined_funcs_auto.txt  undefined_syms_auto.txt
config/anniversary/symbols/: syms_cri_libadxe.txt  syms_gcc_libc.txt  syms_label_overrides.txt  syms_sdk_libcdvd.txt  syms_sdk_libdbc.txt  syms_sdk_libgraph.txt  syms_sdk_libkernl_alarm.txt  syms_sdk_libkernl_cache.txt  syms_sdk_libkernl_deci2.txt  syms_sdk_libkernl_diei.txt  syms_sdk_libkernl_eeloadfile.txt  syms_sdk_libkernl_exit.txt  syms_sdk_libkernl_filestub.txt  syms_sdk_libkernl_glue.txt  syms_sdk_libkernl_initsys.txt  syms_sdk_libkernl_intr.txt  syms_sdk_libkernl_iopheap.txt  syms_sdk_libkernl_iopnotify.txt  syms_sdk_libkernl_iopreset.txt  syms_sdk_libkernl_klib.txt  syms_sdk_libkernl_kprintf2.txt  syms_sdk_libkernl_libosd.txt  syms_sdk_libkernl_sifcmd.txt  syms_sdk_libkernl_sifrpc.txt  syms_sdk_libkernl_thread.txt  syms_sdk_libkernl_timer.txt  syms_sdk_libkernl_timeralarm.txt  syms_sdk_libkernl_tlbfunc.txt  syms_sdk_libkernl_tlbtrap.txt  syms_sdk_libkernl_tty.txt  syms_sdk_libmc.txt  syms_sdk_libpad2.txt  syms_sdk_libvib.txt  syms_sdk_libvu0.txt  syms_sfiii.txt
config/cps3/: sfiii3n.yaml
config/standalone/: sfiii.standalone.yaml  undefined_funcs_auto.txt
config/standalone/symbols/: syms_cri_libadxe.txt  syms_gcc_libc.txt  syms_sdk_libcdvd.txt  syms_sdk_libdbc.txt  syms_sdk_libdma.txt  syms_sfiii.txt
config/symbols/: symbol_addrs.txt  syms_sdk_libgraph.txt  syms_sdk_libkernl.txt  syms_sdk_libmc.txt  syms_sdk_libpad2.txt  syms_sfiii.txt
config/symbols/cri/: syms_cri_libadxe.txt
docs/: README.md  building.md
elf/: footer
elf/anniversary/: header
elf/standalone/: header
include/: GameOver.h  common.h  cri_macro.inc  fbms.h  macro.inc  math.h  memfound.h  mw_stdarg.h  pad.h  plapx.h  plbmp.h  plcommon.h  plpic.h  pltim2.h  structs.h  types.h  unknown.h  zlib.h
include/bin2obj/: asstbl.h  buttobi.h  char_table.h  common.h  etc.h  exchange.h  gauge.h
include/cri/: cri_adxf.h  cri_adxt.h  cri_aixp.h  cri_rofs.h  cri_ut.h  cri_xpts.h  crimwsfd.h  sj.h
include/cri/ee/: adx_ps2.h  cri_mw.h  cri_xpt.h
include/cri/iop/: cri_adxi.h  cri_xpt.h
include/gcc/: malloc.h  math.h  memory.h  stdio.h  stdlib.h  string.h
include/port/: float_clamp.h  resources.h  sdk_threads.h  sdl_app.h  sdl_pad.h
include/port/sdl/: sdl_adx_sound.h  sdl_app.h  sdl_game_renderer.h  sdl_message_renderer.h  sdl_pad.h
include/port/sound/: emlShim.h  list.h  spu.h
include/sdk/: eekernel.h  eeregs.h  eestruct.h  libcdvd.h  libdbc.h  libdma.h  libgraph.h  libmc.h  libpad2.h  libvib.h  libvu0.h  sif.h  sifdev.h  sifprc.h  sifrpc.h  tim2.h
libco/: CMakeLists.txt
splat/: SLPM_656.21.ld  sfiii.yaml  symbol_addrs.txt  undefined_funcs_auto.txt  undefined_syms_auto.txt
src/anniversary/bin2obj/: asstbl.c  char_table.c  etc.c  exchange.c  gauge.c
src/anniversary/port/: float_clamp.c  flps2asm_stubs.c  sdk_stubs.c  sdl_app.c  sdl_pad.c  utils.c
src/anniversary/sdk/: sdk_stubs.c
src/anniversary/stubs/: sdk_stubs.c  (+2 more)
src/bin2obj/: buttobi.c  exchange.c
src/port/: float_clamp.c  resources.c  utils.c
src/sfiii/: 1AB670.c  2207F0.c  main.c
tools/: analyze_xmap.py  biggest_alignment.py  combine-and-decrypt.py  compare_bytes.py  compare_char_data.py  convert_regs.py  dependency_analyzer.py  dump_lines.py  extract_dwarf.py  find_symbol_references_in_dwarf.py  generate_pcsx2_syms.py  lib_tools.py  m2ctx.py  parse_rodata.py  patch_alignment.py  report_progress.py  requirements-arch.txt  requirements-debian.txt  requirements-python.txt  requirements-ubuntu-sdl3.txt  sjis2utf.py  splice_elf.py  split.sh  string_at_offset.py  update_caplogo_progress.py  update_cri_progress.py  update_progress_in_readme.py
tools/lcf/: generate_lcf.py  lcf_footer.txt  lcf_header.txt
tools/lib-tools/: lib_tools.py
zlib/: zlib.h  zutil.h
(+2242 files in other folders)
